  desk/deskins.c: Replaced magic number for filename length with #define. (RFB)

2012-01-07
- aes/geminit.c: Removed unused code in 'load accessories' routines. (RFB)

2012-01-09
- bios/vectors.h: Define the exception vectors as volatile for safety. (VRI)
- bios/bios.c bios/vectors.h: Clean up exception vector names. (VRI)

2012-01-12
- bios/screen.c: Workaround to get some working video mode on the FireBee. (VRI)

2012-01-17
- bios/screen.c bios/vectors.S: Fix VsetRGB() to update the STe palette
  where appropriate, and to use the VBL handler to update palettes. (RFB)

2012-01-18
- aes/crysbind.h aes/gemaplib.c aes/gemctrl.c aes/gemdisp.c aes/gemevlib.c
  aes/gemfslib.c aes/geminit.c aes/gemlib.h aes/gemmnlib.c aes/gemshlib.c
  aes/gemsuper.c aes/gemwmlib.c aes/optimize.c desk/deskapp.c desk/deskapp.h
  desk/deskdir.c desk/deskins.c desk/deskmain.c desk/deskpro.c desk/desksupp.c
  desk/gembind.h include/compat.h: Removed MULTIAPP #define and code dependent
  on it. (RFB)
- desk/deskbind.h include/compat.h: Finished removal of MULTIAPP. (RFB)

2012-01-19
- include/compat.h aes/gemmnlib.c: Increased allowed number of desk
  accessories from 3 to 6. (RFB)
- aes/gemsuper.c aes/gemsuper.h: Removed gl_mnpds[] (never initialised) and
  fixed associated code. (RFB)
- aes/gemmnlib.c aes/gemmnlib.h: Fixed potential memory overwrite when title
  for menu_register() exceeds 21 bytes. (RFB)
- aes/gemctrl.c aes/gemmnlib.c aes/gemmnlib.h: Fixed implementation of
  menu_unregister() to avoid it changing existing menu ids. (RFB)

2012-01-20
- aes/crysbind.h aes/gemaplib.c aes/gemctrl.c aes/gemevlib.c aes/gemfslib.c
  aes/geminit.c aes/gemmnlib.c aes/gemshlib.c aes/gemsuper.c aes/gemwmlib.c
  desk/gembind.h include/compat.h: Removed SINGLAPP #define and made code
  dependent on it always compile. (RFB)

2012-01-26
- aes/deskmain.c aes/desk_rsc.c aes/desk_rsc.h aes/gembind.c: Reorganised
  desktop resource files in preparation for upcoming changes. (RFB)